@@ -516,6 +516,7 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+specifier|final
 name|List
 argument_list|<
 name|Collector
@@ -525,8 +526,11 @@ init|=
 operator|new
 name|ArrayList
 argument_list|<>
-argument_list|()
+argument_list|(
+literal|2
+argument_list|)
 decl_stmt|;
+specifier|final
 name|FieldType
 name|fieldType
 init|=
@@ -703,9 +707,9 @@ name|topGroups
 decl_stmt|;
 if|if
 condition|(
-name|topNGroups
-operator|>
-literal|0
+name|firstPassGroupingCollector
+operator|!=
+literal|null
 condition|)
 block|{
 if|if
@@ -771,7 +775,9 @@ name|groupCount
 decl_stmt|;
 if|if
 condition|(
-name|includeGroupCount
+name|allGroupsCollector
+operator|!=
+literal|null
 condition|)
 block|{
 name|groupCount
